# klimalogger

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  LICENSE  README.md  README.rst  install.py  main_cpy.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_cpy.txt  requirements_tests.txt  setup.py  sonar-project.properties  update_requirements
.github/workflows/: analysis.yml  build.yml  codeql-analysis.yml  dependency-review.yml  pr_automation.yml  pre-commit.yml  scorecard.yml
klimalogger/: __init__.py  config.py  data_builder.py  data_log.py  i2c.py  logger.py  measurement.py  measurements.py  queue.py  sensor_factory.py  sensors.py  store_client.py  transport.py
klimalogger/calc/: __init__.py  pressure.py  temperature.py
klimalogger/cpy/: i2c.py  mqtt.py  ntp.py  pixel.py
klimalogger/script/: klimalogger.py  receive_data.py
klimalogger/sensor/: __init__.py  bh1750.py  bme680.py  bme680_sensor.py  bmp085_sensor.py  bmp3xx.py  bmp3xx_sensor.py  dps310.py  mmc56x3.py  pm25.py  scd4x.py  scd4x_sensor.py  sgp30.py  sgp30_sensor.py  sgp40.py  sgp40_sensor.py  sht1x.py  sht1x_sensor.py  sht4x.py  sht4x_sensor.py  tsl2591.py  veml7700.py
klimalogger/store/: __init__.py  client.py  file.py  influxdb.py  influxdb2.py  queue.py
scripts/: klimalogger  receive_data.py  send_data.py
tests/: conftest.py  test_calc_pressure.py  test_calc_temperature.py  test_client.py  test_config.py  test_data_builder.py  test_measurement.py  test_queue.py  test_script_klimalogger.py  test_sensor_factory.py  test_sensors.py
tests/calc/: test_temperature.py
tests/sensor/: conftest.py  test_bh1750.py  test_bme680.py  test_bmp3xx.py  test_dps310.py  test_mmc56x3.py  test_pm25.py  test_scd4x.py  test_sgp30.py  test_sgp40.py  test_sht4x.py  test_tsl2591.py  test_veml7700.py
