[tool.poetry]
name = "klimalogger"
version = "0.7.19"
description = "Simple data logging client for InfluxDB"
authors = ["Andreas Würl <andi@tryb.de>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.urls]
"Homepage" = "https://github.com/wuan/klimalogger"
"Bug Tracker" = "https://github.com/wuan/klimalogger/issues"

[tool.poetry.scripts]
klimalogger = "klimalogger.script.klimalogger:main"
receive-data = "klimalogger.script.receive_data:main"

[tool.poetry.dependencies]
python = "^3.9"
influxdb-client = "^1.46.0"
injector = "^0.22.0"
lazy = "^1.6"
adafruit-circuitpython-busdevice = "^5.2.10"
paho-mqtt = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
assertpy = "^1.1"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

