[tool.poetry]
name = "klimalogger"
version = "0.7.28"
description = "Simple data logging client for InfluxDB/MQTT target"
authors = ["Andreas Würl <andi@tryb.de>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.urls]
"Homepage" = "https://github.com/wuan/klimalogger"
"Bug Tracker" = "https://github.com/wuan/klimalogger/issues"

[tool.poetry.scripts]
klimalogger = "klimalogger.script.klimalogger:main"
receive-data = "klimalogger.script.receive_data:main"

[tool.poetry.dependencies]
python = "^3.10"
influxdb-client = "^1.46"
lazy = "^1.6"
adafruit-circuitpython-busdevice = "^5.2"
paho-mqtt = "^2.1.0"
adafruit-circuitpython-sht4x = "^1.0.24"
adafruit-circuitpython-sgp40 = "^1.3.21"
adafruit-circuitpython-bme680 = "^3.7.13"
adafruit-circuitpython-bmp3xx = "^1.3.24"
adafruit-circuitpython-sgp30 = "^3.0.13"
adafruit-circuitpython-scd4x = "^1.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
assertpy = "^1.1"
mock = "^5.1.0"
pre-commit = "^4.3.0"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
