[tool.poetry]
name = "klimalogger"
version = "0.8.9"
description = "Simple data logging client for InfluxDB/MQTT target"
authors = ["Andreas Würl <andi@tryb.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.urls]
"Homepage" = "https://github.com/wuan/klimalogger"
"Bug Tracker" = "https://github.com/wuan/klimalogger/issues"

[tool.poetry.scripts]
klimalogger = "klimalogger.script.klimalogger:main"
receive-data = "klimalogger.script.receive_data:main"

[tool.poetry.dependencies]
python = "^3.10"
lazy = "^1.6"
adafruit-circuitpython-busdevice = "^5.2"
paho-mqtt = "^2.1.0"
adafruit-circuitpython-sht4x = "^1.0.24"
adafruit-circuitpython-sgp40 = "^1.3.21"
adafruit-circuitpython-bme680 = "^3.7.13"
adafruit-circuitpython-bmp3xx = "^1.3.24"
adafruit-circuitpython-sgp30 = "^3.0.13"
adafruit-circuitpython-scd4x = "^1.4.8"
adafruit-circuitpython-bh1750 = "^1.1.16"
adafruit-circuitpython-mmc56x3 = "^1.0.13"
adafruit-circuitpython-veml7700 = "^2.1.5"
adafruit-circuitpython-dps310 = "^2.1.20"
adafruit-circuitpython-pm25 = "^2.1.22"
adafruit-circuitpython-tsl2591 = "^1.4.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
assertpy = "^1.1"
mock = "^5.1.0"
pre-commit = "^4.3.0"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
